--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 
 <section class="main-section" id="service"><!--main-section-start-->
 	<div class="container">
-    	<h2>Random Pix Generator</h2>
-    	<h6>Where Soda's ideas come to life (click to generate)</h6>
+    	<h2>Moment Generator</h2>
+    	<h6>Where Soda's ideas come to life<br/>Click to generate</h6>
                 <div class="row wow fadeInLeft delay-01s text-center" >
                 	<div class="col-md-3 col-xs-6">
-                        Width: <input id="sliderWidth" data-slider-id='sliderWidth' type="text" data-slider-min="20" data-slider-max="200" data-slider-step="10" data-slider-value="100"/>
+                        Width: <input id="sliderWidth" data-slider-id='sliderWidth' type="text" data-slider-min="20" data-slider-max="250" data-slider-step="10" data-slider-value="100"/>
                 	</div>
                 
                 	<div class="col-md-3 col-xs-6">
-                        Height: <input  id="sliderHeight" data-slider-id='sliderHeight' type="text" data-slider-min="20" data-slider-max="200" data-slider-step="10" data-slider-value="50"/>
+                        Height: <input  id="sliderHeight" data-slider-id='sliderHeight' type="text" data-slider-min="20" data-slider-max="250" data-slider-step="10" data-slider-value="50"/>
                 	</div>
 
                 	<div class="col-md-3 col-xs-6">
-                        Colors: <input  id="sliderColors" data-slider-id='sliderColors' type="text" data-slider-min="2" data-slider-max="40" data-slider-step="1" data-slider-value="4"/>
+                        Colors: <input  id="sliderColors" data-slider-id='sliderColors' type="text" data-slider-min="2" data-slider-max="64" data-slider-step="1" data-slider-value="4"/>
                 	</div>
 
                     <div class="col-md-3 col-xs-6">
@@ -94,7 +94,6 @@
                     <div class="col-md-6 col-xs-6">
                         Auto Refresh: <input type="checkbox" id="chkTimer">
                 	</div>
-
             </div>
         
         </div>
@@ -102,6 +101,8 @@
         <div class="row" style="margin-top:15px;">
         	<div class="col-md12 wow fadeInUp delay-05s text-center">
                 <canvas id="canvas" />
+                <br/>
+                Click to regenerate
         	</div>
         </div>
 
